wrong height fixed

--- a/04_hidden-search-widget/style.css
+++ b/04_hidden-search-widget/style.css
@@ -25,7 +25,7 @@ body {
   border: 0;
   font-size: 18px;
   padding: 15px;
-  height: 100px;
+  height: 50px;
   width: 50px;
   transition: width 0.3s ease;
 }
